deploy/istiok8s/templates/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istiok8s-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello
spec:
  hosts:
    - "*"
  gateways:
    - istiok8s-gateway
  http:
    - match:
        - uri:
            prefix: /istiok8s/
      rewrite:
        uri: "/"
      route:
        - destination:
            host: hello-world-deployment-cs
            subset: base
            port:
              number: 8081
